# amplifier-app-runtime

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: ACP.md  ACP_FEATURE_ANALYSIS.md  ACP_PROTOCOL_COVERAGE.md
docs/design/: HOST_TOOLS_ARCHITECTURE.md
src/amplifier_app_runtime/: app.py  bundle_manager.py  cli.py  client_tools.py  event_types.py  events.py  host_tools.py  key_manager.py  project_utils.py  provider_config_utils.py  provider_loader.py  provider_sources.py  resolvers.py  session.py  stdio.py
src/amplifier_app_runtime/acp/: __init__.py  __main__.py  agent.py  approval_bridge.py  content_converter.py  event_mapper.py  protocols.py  recipe_integration.py  recipe_tools.py  routes.py  session_discovery.py  slash_commands.py  tool_metadata.py  tools.py  types.py
src/amplifier_app_runtime/hooks/: README.md  __init__.py  base.py
src/amplifier_app_runtime/protocol/: __init__.py  commands.py  events.py  handler.py
src/amplifier_app_runtime/protocols/: __init__.py  approval.py  display.py  hooks.py  spawn.py  streaming.py
src/amplifier_app_runtime/recipes/: README.md  __init__.py  discovery.py  metadata.py  types.py
src/amplifier_app_runtime/routes/: __init__.py  events.py  modules.py  protocol_adapter.py  session.py
src/amplifier_app_runtime/sdk/: __init__.py  transport.py  transport_client.py  types.py
src/amplifier_app_runtime/transport/: __init__.py  stdio.py
src/amplifier_server/: bus.py  cli.py
src/amplifier_server/routes/: session.py
src/amplifier_server/sdk/: __init__.py  client.py  types.py
src/amplifier_server/transport/: sse.py
src/amplifier_server_app/: app.py  bundle_manager.py  cli.py  session.py  session_store.py
src/amplifier_server_app/acp/: __init__.py  __main__.py  agent.py  handler.py  routes.py  tools.py  transport.py  types.py
src/amplifier_server_app/protocol/: commands.py  handler.py
src/amplifier_server_app/protocols/: __init__.py  approval.py  display.py  spawn.py  streaming.py
src/amplifier_server_app/routes/: __init__.py  health.py  protocol_adapter.py  session.py  websocket.py
src/amplifier_server_app/transport/: __init__.py  base.py  stdio.py  stdio_adapter.py  websocket.py  webtransport.py
tests/: conftest.py  test_acp_tools.py  test_content_conversion.py  test_host_tools.py  test_session_store.py  test_slash_commands.py  test_storage_config.py
tests/acp/: test_approval_bridge.py  test_approval_e2e.py  test_e2e_acp.py  test_e2e_acp_tools.py  test_e2e_content_types.py  test_e2e_slash_commands.py  test_recipe_event_mapping.py  test_recipe_tools.py
tests/integration/: __init__.py  test_amplifier_integration.py  test_handler.py  test_http_adapter.py  test_stdio_adapter.py
tests/recipes/: __init__.py  test_discovery.py  test_metadata.py  test_types.py
tests/unit/: __init__.py  test_acp.py  test_acp_sessions.py  test_bundle_cache.py  test_bundle_manager.py  test_commands.py  test_context_injection.py  test_encoding.py  test_events.py  test_hooks.py  test_minimal_session.py  test_resolvers.py  test_routes_session.py  test_session.py  test_spawn.py  test_streaming.py  test_websocket.py
