[project]
name = "amplifier-app-runtime"
version = "0.1.0"
description = "Amplifier backend server - HTTP API with event streaming for AI agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
keywords = ["amplifier", "ai", "agent", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "amplifier-core",
    "amplifier-foundation",
    "agent-client-protocol>=0.7.1",
]

[project.optional-dependencies]
http3 = [
    "aioquic>=1.0.0",
    "hypercorn[h3]>=0.17.0",
]

[project.scripts]
amplifier-runtime = "amplifier_app_runtime.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_runtime"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyright>=1.1.380",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = ["ignore::DeprecationWarning"]
